  the peer.URL class by replacing parse_str() by a handcrafted parser
  (friebe, Marius Rosoiu)
- Changed img.fonts.TrueTypeFont's constructor to throw an exception if
  the font cannot be found
  (friebe)
- Fixed Runtime::memoryUsage() and Runtime::peakMemoryUsage()
  (friebe)
- Fixed generics declaration parsing in create() and is()
  (friebe)

Features
~~~~~~~~
- Made io.File::copy() and io.File::move() accept io.File and io.Folder 
  instances in addition to strings.
  (friebe)
- Added values() method to util.collections.HashTable
  (friebe)
- Added support for multiple cookies in unittest.web.WebTestCase
  (kiesel, Felix Stahlberg)
- Added support for multiple header values to peer.http.HttpRequest
  (friebe)
- Implemented fluent interface for rdbms.finder API
  (friebe)
- Added ability to define regular expressions in @expect(withMessage)
  by using a forward slash as its first character.
  http://news.xp-framework.net/article/378/2010/09/18/
  (friebe)
- Added lang.ArrayType and lang.MapType classes to represent zero-based
  indexed lists of elements and key/value-pairs, respectively
  http://news.xp-framework.net/article/376/2010/09/18/
  (friebe)
- Added indexer access functionality, this(): this(array(1, 2, 3), 1)= 2
  http://news.xp-framework.net/article/379/2010/09/22/
  (friebe)
- Enabled protected member access via reflection
  http://news.xp-framework.net/article/351/2010/04/04/
  (friebe)
- Changed command line reflection ("xp -r") to display generic definitions
  (friebe)
- Extended is() core functionality to accept primitive and array types
  (friebe)
- Added isInstance() method to lang.Type and lang.Primitive classes
  (friebe)
- Added typeof() core functionality
  (friebe)


Version 5.7.11, released 2010-09-14
-----------------------------------
SVN version: 14818

Heads up!
~~~~~~~~~
- Deprecated peer.mail.Message::getRecipient() - the iterative use of
  fetching the recipients with "while" in favor of getRecipients()
  (friebe)